alignment corrections

--- a/css/scss/components/_contents.scss
+++ b/css/scss/components/_contents.scss
@@ -1018,5 +1018,5 @@ object {
 }
 
 .project-close {
-	padding: 20px 0,
+	padding: 20px 0;
 }
